@@ -6,5 +6,5 @@ DISTRIB_VERSION_MAJOR 	= $(shell lsb_release -s -r | cut -d '.' -f 1)
 DISTRIB_VERSION_MINOR 	= $(shell lsb_release -s -r | cut -d '.' -f 2)
 ifeq (1,$(shell test "$(DISTRIB_VERSION_MAJOR)$(DISTRIB_VERSION_MINOR)" -ge "1104" && echo "1"))
 # Enable crashreporter on nightly builds newer than Maverick
-MOZ_ENABLE_BREAKPAD = 0
+MOZ_ENABLE_BREAKPAD = 1
 endif
